--- a/servicess.css
+++ b/servicess.css
@@ -1,3 +1,6 @@
+/* *{
+    background:  linear-gradient(135deg, #42e695, #3bb2b8);
+} */
 body {
 
     font-family: Arial, sans-serif;
@@ -7,9 +10,13 @@ body {
     padding: 0;
 
     text-align: center;
+    background:  linear-gradient(135deg, #42e695, #3bb2b8);
 
 }
-
+ul {
+    list-style: none;
+    padding: 0;
+}
 
 
 header {
